remove arquivos bat e atualiza README com comandos de terminal